Fixed horizontal scroll bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.site-wrapper {
+    overflow-x: hidden;
+}
+
 .header {
     z-index: 10;
     padding-top: 48px;
